--- a/knitting_app/pubspec.yaml
+++ b/knitting_app/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   provider: ^6.1.5+1
   shared_preferences: ^2.5.4
   just_audio: ^0.10.5
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   flutter_test:
@@ -63,7 +64,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/musics/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
