--- a/knitting_app/.gitignore
+++ b/knitting_app/.gitignore
@@ -43,3 +43,10 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Firebase related
+/android/app/google-services.json
+firebase.json
+/lib/firebase_options.dart
+# ios/Runner/GoogleService-Info.plist
+/android/local.properties
