--- a/knitting_app/pubspec.yaml
+++ b/knitting_app/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   shared_preferences: ^2.5.4
   just_audio: ^0.10.5
   url_launcher: ^6.3.2
+  firebase_auth: ^6.1.3
+  firebase_core: ^4.3.0
 
 dev_dependencies:
   flutter_test:
